# gen-painter

./: .gitignore  Makefile  _share.h  art.c  art.h  art_data.h  clouds.c  clouds.h  compile_flags.txt  epd.c  epd.h  forecast.c  forecast.h  grass.c  grass.h  image.c  image.h  image_adv.c  image_adv.h  keys-example.h  landscape.c  landscape.h  main.c  perlin.c  perlin.h  random.c  random.h  sdl.c  sun.c  sun.h  tree.c  tree.h
eink-esp32/: _share.h  art.c  art.h  art_data.h  clouds.c  clouds.h  eink-esp32.ino  forecast.c  forecast.h  grass.c  grass.h  image.c  image.h  image_adv.c  image_adv.h  keys.h  landscape.c  landscape.h  perlin.c  perlin.h  sun.c  sun.h  tree.c
esp/: CMakeLists.txt  sdkconfig
esp/components/art/: CMakeLists.txt
esp/main/: CMakeLists.txt
esp/main/include/: keys-example.h
esp/main/src/: esp32_main.c
include/art/: _share.h  art.h  art_data.h  clouds.h  forecast.h  grass.h  landscape.h  mountain.h  random.h  random_point.h  road.h  sun.h  tree.h  world.h
include/art/background/: clouds.h  landscape.h  landscape_fog.h  mountain.h  sun.h
include/art/image/: 3d.h  bezier.h  border.h  image.h  image_adv.h  lerp.h  polyfill.h
include/art/object/: grass.h  house.h  lake.h  road.h  rock.h  street_light.h  tree.h
sdl/: CMakeLists.txt
sdl/include/: art
sdl/src/: art  sdl_main.c
src/: sdl_main.c
src/art/: art.c  clouds.c  forecast.c  grass.c  landscape.c  mountain.c  random.c  random_point.c  road.c  sun.c  tree.c  world.c
src/art/background/: clouds.c  landscape.c  landscape_fog.c  mountain.c  sun.c
src/art/image/: bezier.c  (+4 more)
(+22 files in other folders)
